# skin

./: .gitignore  README.md  pyproject.toml  skin.geany
.helix/: languages.toml
api/: README.md  main.py  pyproject.toml  v1.py
assets/models/: mpox_model-v3.h5
bot/: README.md  main.py  pyproject.toml
skin-ai/: README.md  pyproject.toml
skin-ai/src/: model.py  skin_ai.py
