[project]
name = "skin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.13.0",
    "oxapy>=0.7.9",
    "skin-ai",
    "tensorflow>=2.20.0",
]

[tool.uv.workspace]
members = ["skin-ai", "api"]

[tool.uv.sources]
skin-ai = { workspace = true }
